--- a/README
+++ b/README
@@ -4,3 +4,6 @@
 
 # media park
 https://en.wikipedia.org/wiki/Media_Park_(Hilversum)
+
+# disposal of human corpses
+https://en.wikipedia.org/wiki/Disposal_of_human_corpses
