--- a/README
+++ b/README
@@ -8,5 +8,8 @@
 # media park
 https://en.wikipedia.org/wiki/Media_Park_(Hilversum)
 
+# samenzwering
+https://nl.wikipedia.org/wiki/Samenzwering
+
 # disposal of human corpses
 https://en.wikipedia.org/wiki/Disposal_of_human_corpses
